fix tabs display on mobile view

--- a/src/Wallabag/CoreBundle/Resources/public/themes/material/css/main.css
+++ b/src/Wallabag/CoreBundle/Resources/public/themes/material/css/main.css
@@ -420,6 +420,17 @@ main ul.row {
     .reader-mode span {
         opacity: 1;
     }
+
+    .tabs {
+        display: inline-block;
+        height: auto;
+    }
+    .tab {
+        min-width: 100%;
+    }
+    .indicator {
+        display: none;
+    }
   }
 
 @media only screen and (min-width : 400px) {
